Moved GPU and shader options to GPUExecutor.